fix: Update PropTypes in ModalCrearPregunta and ModalEditarParteVideo components
